# rustfun

./: .gitignore
lib/gl/: Cargo.toml
somerust/: Cargo.toml
somerust/cpp_test/: commentary.txt  fib.s  main.cpp  main.s
somerust/src/: castling.rs  chess_board.rs  chess_color.rs  chess_move.rs  chess_scoring.rs  chess_square.rs  colored_shape.rs  gl_buffers.rs  main.rs  mat4.rs  multi_thought_node.rs  render_gl.rs  renderable_colored_shape.rs  sprite.rs  texture.rs  thought_node.rs  vec3.rs
somerust/src/shaders/: simple_image.frag  simple_image.vert  triangle.vert
