[package]
name = "somerust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path = "../lib/gl" }
image = "0.23.14"

[dependencies.sdl2]
version = "^0.34.5"
features = ["bundled"]

[features]
gl_debug = ["gl/debug"]